kubernetes/apps/adguard/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  labels:
    app: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
